--- a/gfx/layers/Makefile.in
+++ b/gfx/layers/Makefile.in
@@ -31,6 +31,7 @@ EXPORTS = \
         BasicLayers.h \
         BasicTiledThebesLayer.h \
         BasicImplData.h \
+        Compositor.h \
         CompositorOGL.h \
         FrameMetrics.h \
         ImageLayers.h \
