started on the texture host/client work, mostly on the IPDL and hooks. Doesn't build :-( sorry

--- a/gfx/layers/Makefile.in
+++ b/gfx/layers/Makefile.in
@@ -67,6 +67,7 @@ CPPSRCS = \
         ContainerLayerOGL.cpp \
         ImageLayerOGL.cpp \
         LayerManagerOGL.cpp \
+        TextureClient.cpp \
         TextureOGL.cpp \
         ThebesLayerOGL.cpp \
         TiledThebesLayerOGL.cpp \
